libmpdclient 2.20 (not yet released)
* support MPD protocol 0.23
  - getvol
* support MPD protocol 0.22.4
  - binarylimit
* support MPD protocol 0.22.0
  - readpicture
* support MPD protocol 0.21.0
  - albumart
* support tags "ComposerSort", "Ensemble", "Movement",
  "MovementNumber", "Location"

libmpdclient 2.19 (2020/07/03)
* fix off-by-one bug in MPD_HOST parser
* add function mpd_lookup_replay_gain_mode()
* playlist: add function mpd_run_playlist_move()
* identify messages with length over the buffer limit
* support MPD protocol 0.16
 - replay gain
* support MPD protocol 0.19
 - idle events "neighbor" and "mount"
* support MPD protocol 0.20
 - rangeid
* support MPD protocol 0.21
  - command "tagtypes all"

libmpdclient 2.18 (2020/01/20)
* more out-of-memory checks
* partition: add mpd_recv_partition()
* support MPD protocol 0.21
 - "oneshot" single state
* support MPD protocol 0.22
 - status: add mpd_status_get_partition()
 - commands "delpartition", "moveoutput"

libmpdclient 2.17 (2019/12/04)
* search: add mpd_search_add_db_songs_to_playlist()
* idle: support event "partition"
* support MPD protocol 0.19
  - "listneighbors"
* support MPD protocol 0.22
  - "getfingerprint"
* support tags "MPD_TAG_LABEL", "MPD_TAG_MUSICBRAINZ_WORKID", "Grouping",
  "Work", "Conductor"
* support MPD partitions
* mpd_async_set_keepalive() returns bool
* mpd_connection_set_keepalive() returns bool
* fix build failure on Haiku

libmpdclient 2.16 (2018/10/09)
* support MPD protocol 0.19
  - "mount", "unmount", "listmounts"
* support MPD protocol 0.17
  - "load" with range
* add mpd_output_get_attribute()
* use UINX_MAX instead of `(unsigned)-1` to avoid undefined behavior

libmpdclient 2.15 (2018/09/02)
* support MPD protocol 0.21
  - search: support search expressions
  - search: descending sort
  - search: support sorting by "Last-Modified"
  - song: audio format
* support MPD protocol 0.17
  - player: command "seekcur"
* fix `-Wrestrict` compiler warning
